--- a/index.new.html
+++ b/index.new.html
@@ -9,20 +9,20 @@
         <script src="./scripts/index.new.js" defer></script>
     </head>
     <body>
-        <h1>Awesome Player!!!</h1>
+       
         <div id="add-section">
             <h2>Add a new song</h2>
-            <div id="inputs">
+            <form id="inputs" >
                 <input name="title" placeholder="Title">
                 <input name="album" placeholder="Album">
                 <input name="artist" placeholder="Artist">
                 <input name="duration" placeholder="Duration (mm:ss)">
                 <input name="cover-art" placeholder="Cover art link">
-            </div>
-            <button id="add-button">Add</button>
+            </form>
+            <button id="add-button"  >Add</button>
         </div>
         <div id="songs">
-            <h2>Songs</h2>
+            <h2 class = "header" >Songs:</h2>
             <div class="list">
                 <!-- <div class="song">
                     <div class="left">
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div id="playlists">
-            <h2>Playlists</h2>
+            <h2 class = "header" >Playlists:</h2>
             <div class="list">
                 <!-- <div class="playlist">
                     <div class="left">
