--- a/index.new.html
+++ b/index.new.html
@@ -8,21 +8,20 @@
         <script src="./scripts/player.js"></script>
         <script src="./scripts/index.new.js" defer></script>
     </head>
-    <body>
+    <body id="body">
        
         <div id="add-section">
             <h2>Add a new song</h2>
             <form id="inputs" >
-                <input name="title" placeholder="Title">
-                <input name="album" placeholder="Album">
-                <input name="artist" placeholder="Artist">
-                <input name="duration" placeholder="Duration (mm:ss)">
-                <input name="cover-art" placeholder="Cover art link">
+                <input name="title" placeholder="Title" required>
+                <input name="album" placeholder="Album" required>
+                <input name="artist" placeholder="Artist" required>
+                <input name="duration" placeholder="Duration (mm:ss)" required>
+                <input name="cover-art" placeholder="Cover art link" required>
             </form>
             <button id="add-button"  >Add</button>
         </div>
         <div id="songs">
-            <h2 class = "header" >Songs:</h2>
             <div class="list">
                 <!-- <div class="song">
                     <div class="left">
